--- a/back-end/service/src/test/resources/application-test.yml
+++ b/back-end/service/src/test/resources/application-test.yml
@@ -10,7 +10,7 @@ spring:
     url: jdbc:h2:mem:testDB;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
-    initialize: true
+    initialization-mode: always
     driver-class-name: org.h2.Driver
     continue-on-error: false
     platform: h2
